# titstake

./: .eslintrc.js  .gitignore  LICENSE  jest.config.js  package.json  titstake.code-workspace
contracts/main/: Cargo.toml  build.sh
contracts/main/src/: lib.rs
contracts/main/src/bet/: enumerable.rs  internal.rs  mod.rs
contracts/voting/: Cargo.toml  build.sh
contracts/voting/src/: internal.rs  lib.rs  motion.rs  registration.rs  vote.rs
neardev-main/: dev-account  dev-account.env
neardev-voting/: dev-account  dev-account.env
test/: app.test.js  config.js  near-utils.js  setup.js  test-utils.js  voting.test.js
utils/: add-account.js  deploy.js  hoist-credentials.js  patch-config.js  patch-deploy-config.js  patch-main.js  read-state.js  shardnet.js  view-state-keys.js
