[package]
name = "titstake"
version = "0.0.1"
authors = ["Will <will@titstake.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=4.0.0"
uint = "=0.9.3"
miniserde = "=0.1.24"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
