[package]
name = "titstake-voting"
version = "0.0.0"
authors = ["Will <will@titstake.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=3.1.0"
chrono = "=0.4.19"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
